<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@color/gold"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/page_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:text="@string/login_page_title"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/podkreslenie"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/podkreslenie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_login"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email_hint"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:background="@drawable/button"
        android:backgroundTint="#29000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podkreslenie" />



    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:backgroundTint="#29000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:backgroundTint="#29000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

    <TextView
        android:id="@+id/textView_nie_masz_konta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/podpis_logowanie"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <TextView
        android:id="@+id/textViewToRegister"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/podpis_logowanie_2"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textView_nie_masz_konta"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>